# ticket-router

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: custom-taxonomy.json  tickets.jsonl
src/ticket_router/: __init__.py  __main__.py  classifier.py  cli.py  io.py  models.py  report.py  taxonomy.py
tests/: test_classifier.py  test_io_and_cli.py
